--- a/cfbets/cron.yaml
+++ b/cfbets/cron.yaml
@@ -1,4 +1,5 @@
 cron:
 - description: "daily betting email"
   url: /tasks/daily_email
-  schedule: every day 23:04
+  schedule: every day 18:04
+  timezone: America/New_York
