--- a/cfbets/app.yaml
+++ b/cfbets/app.yaml
@@ -22,6 +22,8 @@ handlers:
 libraries:
 - name: MySQLdb
   version: 1.2.5
+- name: ssl
+  version: latest
 # [END django_app]
 
 # Google App Engine limits application deployments to 10,000 uploaded files per
