--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==1.10.3
+Django==1.11.28
 django-datatables-view==1.14.0
 MySQL-python==1.2.5
 argparse==1.2.1
@@ -7,4 +7,4 @@ lockfile==0.12.2
 mailer==0.8.1
 mysqlclient==1.3.9
 wsgiref==0.1.2
-requests==requests-2.21.0
+requests==2.21.0
